overflow-x fix for mobile menu

--- a/styles.css
+++ b/styles.css
@@ -10,13 +10,13 @@
     padding: 0;
 }
 
-html {
-    overflow-x: hidden;
-}
-
 body {
     background-color: #f2f2f2;
     color: white;
+}
+
+.site-container {
+    position: relative;
     overflow-x: hidden;
 }
 
@@ -26,6 +26,7 @@ nav {
     justify-content: space-around;
     align-items: center;
     min-height: 8vh;
+    overflow-x: hidden;
 }
 
 .nav-links {
